# square-customers-api-fdw

./: Cargo.toml
src/: lib.rs
wit/: world.wit
